--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 				<main class="col order-2" id="main">
 					<div id="cityDisplay">
 						<h2 id="cityName">City</h2>
+						<img id="cityIcon" />
 						<p id="cityTemp">Temp:</p>
 						<p id="cityWind">Wind:</p>
 						<p id="cityHumid">Humidity:</p>
